Bug 483744 - NeoChat crashes when clicking on a mention
Summary: NeoChat crashes when clicking on a mention
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: 24.02.0
Platform: Neon Linux
: NOR crash
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-03-16 10:55 UTC by aronkvh
Modified: 2024-03-23 19:55 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description aronkvh 2024-03-16 10:55:38 UTC
If I click on a mention link, NeoChat 24.02.0 always crashes.

1. Send a message that includes @username:kde.org
2. click on the link created

I have a private chat with the mentioned user.

Message source:
{
    "age": 472611,
    "content": {
        "body": "slightly related: What's the most official use of KDE stuff in France (@allon:kde.org)?",
        "format": "org.matrix.custom.html",
        "formatted_body": "slightly related: What's the most official use of KDE stuff in France (@allon:kde.org)?",
        "msgtype": "m.text"
    },
    "event_id": "$qvkziq9N4rz8_jGtvf8d5d9UmLIR58t6OdiQU-iwFQs",
    "origin_server_ts": 1710585925785,
    "room_id": "!DlNPvOTWtKgrDnYGxD:kde.org",
    "sender": "@aronkvh:beeper.com",
    "type": "m.room.message",
    "unsigned": {
        "age": 472611,
        "com.beeper.hs.order": 746580134,
        "transaction_id": "TFTVXHYTYN17105856992602"
    },
    "user_id": "@aronkvh:beeper.com"
}


Starting program: /usr/bin/neochat 
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[New Thread 0x7fffefbff640 (LWP 7387)]
[New Thread 0x7fffef3fe640 (LWP 7388)]
[New Thread 0x7fffecaf0640 (LWP 7390)]
qt.qml.typeresolution.cycle: Cyclic dependency detected between "qrc:/qt/qml/org/kde/desktop/private/TextFieldContextMenu.qml" and "qrc:/qt/qml/org/kde/desktop/MenuItem.qml"
[New Thread 0x7fffc97ff640 (LWP 7393)]
[New Thread 0x7fffc8ffe640 (LWP 7394)]
[New Thread 0x7fffc3fff640 (LWP 7395)]
[New Thread 0x7fffc37fe640 (LWP 7396)]
Reading access token from the keychain for "@aronkvh:beeper.com"
Reading access token from the keychain for "@aronkvh:matrix.org"
[New Thread 0x7fffc2ffd640 (LWP 7398)]
[New Thread 0x7fffc1ffb640 (LWP 7399)]
[New Thread 0x7fffc13fa640 (LWP 7400)]
[New Thread 0x7fffc0bf9640 (LWP 7401)]
[New Thread 0x7fffa7fff640 (LWP 7402)]
quotient.main: The library is built with end-to-end encryption (E2EE)
[New Thread 0x7fffa77fe640 (LWP 7409)]
qrc:/org/kde/neochat/qml/main.qml:250:9: QML RoomListPage: Created graphical object was not placed in the graphics scene.
qrc:/org/kde/neochat/qml/RoomPage.qml:17:1: QML RoomPage: Created graphical object was not placed in the graphics scene.
qrc:/org/kde/neochat/qml/RoomInformation.qml:133:13: QML ListSectionHeader: Binding loop detected for property "implicitWidth"
qrc:/org/kde/neochat/qml/RoomInformation.qml:67:13: QML ListSectionHeader: Binding loop detected for property "implicitWidth"
[New Thread 0x7fffa63ff640 (LWP 7410)]
[New Thread 0x7fffa5bfe640 (LWP 7411)]
[New Thread 0x7fffa53fd640 (LWP 7412)]
[New Thread 0x7fffa4bfc640 (LWP 7413)]
quotient.jobs: 403 <- GET https://matrix.beeper.com/_matrix/client/v1/rooms/%21OX8odWNlaOnhMM383m9V%3Abeeper.local/hierarchy
quotient.jobs: "GetSpaceHierarchyJob" status ContentAccessError: User @aronkvh:beeper.com not in room !OX8odWNlaOnhMM383m9V:beeper.local, and room previews are disabled
quotient.jobs: 403 <- GET https://matrix.beeper.com/_matrix/client/v1/rooms/%21T8bQt641jKIZyF2woPUz%3Abeeper.local/hierarchy
quotient.jobs: "GetSpaceHierarchyJob" status ContentAccessError: User @aronkvh:beeper.com not in room !T8bQt641jKIZyF2woPUz:beeper.local, and room previews are disabled
quotient.jobs: 403 <- GET https://matrix.beeper.com/_matrix/client/v1/rooms/%21okYgRfOnBpe5jyNNNE4u%3Abeeper.local/hierarchy
quotient.jobs: "GetSpaceHierarchyJob" status ContentAccessError: User @aronkvh:beeper.com not in room !okYgRfOnBpe5jyNNNE4u:beeper.local, and room previews are disabled
[New Thread 0x7fff8adff640 (LWP 7414)]
[New Thread 0x7fff8a5fe640 (LWP 7415)]
[New Thread 0x7fff89dfd640 (LWP 7416)]
[New Thread 0x7fff895fc640 (LWP 7417)]
[New Thread 0x7fff88dfb640 (LWP 7418)]
qrc:/org/kde/neochat/qml/TimelineView.qml:139:17: QML SectionDelegate: Possible anchor loop detected on horizontal anchor.
ASSERT: "result == Quotient::UriResolved" in file ./src/roommanager.cpp, line 101

Thread 1 "neochat" received signal SIGABRT, Aborted.
__pthread_kill_implementation (no_tid=0, signo=6, threadid=140737230953216) at ./nptl/pthread_kill.c:44

Versions: Operating System: KDE neon 6.0
KDE Plasma Version: 6.0.2
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Kernel Version: 6.5.0-25-generic (64-bit)
Graphics Platform: X11
Processors: 8 × Intel® Core™ i7-3770 CPU @ 3.40GHz
Memory: 31.3 GiB of RAM
Graphics Processor: NVIDIA GeForce RTX 3060/PCIe/SSE2
Comment 1 Bug Janitor Service 2024-03-22 21:41:09 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/1631
Comment 2 Tobias Fella 2024-03-23 19:54:38 UTC
Git commit 6e7d622b4118333b01c63e2a86b5a15b840b3144 by Tobias Fella.
Committed on 23/03/2024 at 19:46.
Pushed by tfella into branch 'master'.

Fix crash when visiting user

We're adding the "join" action so that rooms are joined.
libQuotient doesn't like it when we the action is join and the uri is for a user.

M  +1    -1    src/roommanager.cpp

https://invent.kde.org/network/neochat/-/commit/6e7d622b4118333b01c63e2a86b5a15b840b3144
Comment 3 Tobias Fella 2024-03-23 19:55:31 UTC
Git commit 429e20417c1ae6a733dc9107aea11a4d465b2029 by Tobias Fella.
Committed on 23/03/2024 at 19:55.
Pushed by tfella into branch 'release/24.02'.

Fix crash when visiting user

We're adding the "join" action so that rooms are joined.
libQuotient doesn't like it when we the action is join and the uri is for a user.

M  +1    -1    src/roommanager.cpp

https://invent.kde.org/network/neochat/-/commit/429e20417c1ae6a733dc9107aea11a4d465b2029